--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "dev": "nodemon ./src/index.js",
     "start": "node ./src/index.js"
   },
-  "dependencies": {},
+  "dependencies": {
+    "apollo-server": "^3.9.0",
+    "graphql": "^16.5.0"
+  },
   "devDependencies": {
     "dotenv": "^8.2.0",
     "nodemon": "^2.0.4"
