--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "dev": "nodemon ./src/index.js",
-    "start": "node ./src/index.js"
+    "start": "NODE_ENV=production node ./src/index.js"
   },
   "dependencies": {
     "apollo-datasource-rest": "^3.6.1",
